// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expense list with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={7000}
      createdAt={"1970-01-01T00:00:00.000Z"}
      description="Gas Bill"
      id={1}
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={40000}
      createdAt={"1969-12-28T00:00:00.000Z"}
      description="Rent"
      id={2}
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={3000}
      createdAt={"1970-01-06T00:00:00.000Z"}
      description="Water Bill"
      id={3}
      key="3"
      note=""
    />
  </div>
</div>
`;

exports[`should render expense list with no expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No Expenses
      </span>
    </div>
  </div>
</div>
`;
